--- a/css/ccb.css
+++ b/css/ccb.css
@@ -15,7 +15,7 @@
 
 body {
     padding: 1em;
-    background-color: #0B4237;
+    background-color: #2C3E50;
 
 }
 
@@ -28,16 +28,7 @@ body {
 #map {
     height: 65em;
 }
-#water-parameters-container{
-    height:65em;
-}
-#water-parameters-content{
-    overflow:auto;
-}
 
-#content-container{
-    height:65em;
-}
 
 #container1 {
     margin: 1px;
@@ -55,100 +46,4 @@ body {
     margin: 1px;
 }
 
-.bs-docs-sidenav {
-    background-color: #FFFFFF;
-    border-radius: 6px 6px 6px 6px;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
-    margin: 30px 0 0;
-    padding: 0;
-    width: 228px;
-}
 
-.bs-docs-sidenav > li > a {
-    border: 1px solid #E5E5E5;
-    display: block;
-    margin: 0 0 -1px;
-    padding: 8px 14px;
-}
-
-.bs-docs-sidenav > li:first-child > a {
-    border-radius: 6px 6px 0 0;
-}
-
-.bs-docs-sidenav > li:last-child > a {
-    border-radius: 0 0 6px 6px;
-}
-
-.bs-docs-sidenav > .active > a {
-    border: 0 none;
-    box-shadow: 1px 0 0 rgba(0, 0, 0, 0.1) inset, -1px 0 0 rgba(0, 0, 0, 0.1) inset;
-    padding: 9px 15px;
-    position: relative;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
-    z-index: 2;
-}
-
-.bs-docs-sidenav .icon-chevron-right {
-    float: right;
-    margin-right: -6px;
-    margin-top: 2px;
-    opacity: 0.25;
-}
-
-.bs-docs-sidenav > li > a:hover {
-    background-color: #F5F5F5;
-}
-
-.bs-docs-sidenav a:hover .icon-chevron-right {
-    opacity: 0.5;
-}
-
-.bs-docs-sidenav .active .icon-chevron-right, .bs-docs-sidenav .active a:hover .icon-chevron-right {
-    background-image: url("../img/glyphicons-halflings-white.png");
-    opacity: 1;
-}
-
-.bs-docs-sidenav.affix {
-    top: 40px;
-}
-
-.bs-docs-sidenav.affix-bottom {
-    bottom: 270px;
-    position: absolute;
-    top: auto;
-}
-
-.bs-docs-container {
-    max-width: 970px;
-}
-
-.bs-docs-sidenav {
-    width: 258px;
-}
-
-.bs-docs-sidenav {
-    margin-right: 0;
-    margin-top: 30px;
-    top: 0;
-    width: 218px;
-}
-
-.bs-docs-sidenav {
-    margin-top: 20px;
-    width: 166px;
-}
-
-.bs-docs-sidenav.affix {
-    top: 0;
-}
-
-.bs-docs-sidenav {
-    margin-bottom: 20px;
-    width: auto;
-}
-
-.bs-docs-sidenav.affix {
-    position: static;
-    top: 0;
-    width: auto;
-}
