--- a/css/ccb.css
+++ b/css/ccb.css
@@ -1,24 +1,31 @@
+.leaflet-popup-content {
+    /*  override leaflet popup font color*/
+    color: #000000;
+    text-align:center;
+    font-size: 14px;
+}
+
 .marker-cluster div {
     /*this is to make the cluster number black instead of grey*/
     color: #000000;
 }
 
-.modal-body{
-    background-image:url('../images/Color_Logo_transpa_20.png');
+.modal-body {
+    background-image: url('../images/Color_Logo_transpa_20.png');
     background-repeat: no-repeat;
     background-position: center;
 
 }
 
-.modal-body p
-    { text-shadow: 1px 1px 1px #000; }
-
-
+.modal-body p {
+    text-shadow: 1px 1px 1px #000;
+}
 
 img {
     opacity: 0.4;
-    filter: alpha(opacity = 40); /* For IE */
+    filter: alpha(opacity=40); /* For IE */
 }
+
 body {
     padding: 1em;
 }
