--- a/css/ccb.css
+++ b/css/ccb.css
@@ -10,6 +10,11 @@
     color: #000000;
 }
 
+.info{
+    color: #000000;
+}
+
+
 .modal-body {
     background-image: url('../images/Color_Logo_transpa_20.png');
     background-repeat: no-repeat;
@@ -55,5 +60,19 @@ body {
 #container4 {
     margin: 1px;
 }
+
+.info {
+            padding: 6px 8px;
+            font: 14px/16px Arial, Helvetica, sans-serif;
+            background: white;
+            background: rgba(255, 255, 255, 0.8);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+        }
+
+        .info h4 {
+            margin: 0 0 5px;
+            color: #000000;
+        }
 
 
